Bug 463619 - Unable to change desktop resolution beyond natively supported resolutions on Wayland
Summary: Unable to change desktop resolution beyond natively supported resolutions on ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.26.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 463655 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-12-30 15:40 UTC by chazzy
Modified: 2023-01-27 22:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chazzy 2022-12-30 15:40:39 UTC
SUMMARY
***
Previously, I was able to go into display settings and set my Wayland desktop to whatever resolution I wanted it to be. However, I am now locked into 4k(the only natively supported resolution) with a message stating: 

"3840x2160 (16:9) is the only supported resolution supported by this display

Using unsupported resolutions was possible in the Plasma X11 session, but they were never guaranteed to work, and are not available in this Plasma Wayland session."

This is on a Manjaro distribution, and this has recurred as of two stable branch system updates ago I believe. Before that, I was able to change my desktop resolution freely on Wayland.

I have even tried a trick I saw on another forum with a extra boot option, "video=eDP-1:2560x1440@60" with no avail. Even if that did work, I shouldn't have to be doing that seeing as I didn't need to in the past. Regardless, it didn't work.
***


STEPS TO REPRODUCE
1. Go to display settings
2. Try to change resolution
3. Observe that the resolution can't be changed

OBSERVED RESULT
A message stating I'm locked to natively supported resolutions.

EXPECTED RESULT

A drop down menu of resolutions similar to X11.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Manjaro 22.0 Sikaris
(available in About System)
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION

This has occurred in the past with Wayland as it was still missing a lot of utility, but the functionality was added in several months back. It has now regressed, and is missing once again.
Comment 1 Jonas Pedersen 2023-01-18 20:20:16 UTC
I am facing exact same issue. Also on Manjaro. It is actually a bit of a showstopper for me as I am often connecting an external display during meetings and using the "unify outputs" option. This results in my laptop screen and the external screen is not running the same resolution and then it is more less unusable for me.
Comment 2 Vlad Zahorodnii 2023-01-24 08:39:26 UTC
Git commit e6d2a1985760084837a7740d8ef9273abee2917b by Vlad Zahorodnii.
Committed on 24/01/2023 at 07:15.
Pushed by vladz into branch 'master'.

backends/drm: Fix custom mode generation

maxSizeRefreshRate is uninitialized.

M  +1    -1    src/backends/drm/drm_connector.cpp

https://invent.kde.org/plasma/kwin/commit/e6d2a1985760084837a7740d8ef9273abee2917b
Comment 3 Vlad Zahorodnii 2023-01-24 09:18:07 UTC
Git commit f8e036be315c63a8b1646c4e93a000674da41187 by Vlad Zahorodnii.
Committed on 24/01/2023 at 09:18.
Pushed by vladz into branch 'cherry-pick-e6d2a198'.

backends/drm: Fix custom mode generation

maxSizeRefreshRate is uninitialized.


(cherry picked from commit e6d2a1985760084837a7740d8ef9273abee2917b)

M  +1    -1    src/backends/drm/drm_connector.cpp

https://invent.kde.org/plasma/kwin/commit/f8e036be315c63a8b1646c4e93a000674da41187
Comment 4 chazzy 2023-01-25 02:01:50 UTC
(In reply to Vlad Zahorodnii from comment #3)
> Git commit f8e036be315c63a8b1646c4e93a000674da41187 by Vlad Zahorodnii.
> Committed on 24/01/2023 at 09:18.
> Pushed by vladz into branch 'cherry-pick-e6d2a198'.
> 
> backends/drm: Fix custom mode generation
> 
> maxSizeRefreshRate is uninitialized.
> 
> 
> (cherry picked from commit e6d2a1985760084837a7740d8ef9273abee2917b)
> 
> M  +1    -1    src/backends/drm/drm_connector.cpp
> 
> https://invent.kde.org/plasma/kwin/commit/
> f8e036be315c63a8b1646c4e93a000674da41187

I just want to say thanks for getting this resolved in a fairly timely manner :)
Comment 5 David Edmundson 2023-01-27 22:18:21 UTC
*** Bug 463655 has been marked as a duplicate of this bug. ***