backends/drm: Fix custom mode generation

maxSizeRefreshRate is uninitialized.

BUG: 463619


(cherry picked from commit e6d2a1985760084837a7740d8ef9273abee2917b)